# todo_rust

./: .env  Cargo.toml  README.md  TESTING_GUIDE.md  build_and_test.sh  postman_collection.json  start_server.sh  test_api.sh
src/: main.rs
src/config/: mod.rs
src/database/: connection.rs
src/handlers/: auth.rs  todo.rs
src/middleware/: auth.rs
src/models/: todo.rs  user.rs
src/utils/: jwt.rs  password.rs
