[package]
name = "todo_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
mongodb = "3.1.0"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
anyhow = "1.0.89"
